NIFI-8278 Added Credentials Type property to ADLSCredentialsControllerService
Used migrateProperties() for migrating old flows to the new property structure.
Moved common properties to AzureStorageUtils and also updated/consolidated some property descriptions, etc.